*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@5931 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-7-25/bud-expenses4-full.html
+++ b/kra-coeus-7-25/bud-expenses4-full.html
@@ -176,7 +176,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </tr>
             <tr>
               <th><div align="right">&nbsp;Total Requested Cost:</div></th>
-              <td colspan="3">$0.00</td>
+              <td colspan="3">$320,000.00</td>
             </tr>
           </table>
         </div>
@@ -189,7 +189,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
           </tr>
         </table>
-        <div class="tab-container" align="center" id="G127" style="display: none;">
+        <div class="tab-container" align="center" id="G127" style="display: nonee;">
           <div class="h2-container"> <span class="subhead-left">
             <h2>Personnel</h2>
             </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
@@ -267,7 +267,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       <td nowrap class="tab-subhead1" width="5%"><a href="#" id="A678" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F678"></a></td>
                       <td colspan="12" align="left" nowrap class="tab-subhead1">Line Item Details</td>
                     </tr>
-                    <tbody id="G678" style="display: none;">
+                    <tbody id="G678" style="display: nonee;">
                       <tr>
                         <th rowspan="9">&nbsp;</th>
                         <th align="left" nowrap="nowrap"><div align="right"><label for ="start date"> Start Date:</label></div></th>
@@ -333,7 +333,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <tr>
                               <td colspan="14" nowrap class="tab-subhead1"><a href="#" id="A2" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F2"></a> Justification</td>
                             </tr>
-                            <tbody id="G2" style="display: none;">
+                            <tbody id="G2" style="display: nonee;">
                               <tr>
                                 <th align="left"><div align="right">Justification:</div></th>
                                 <td align="left"><label>
@@ -383,7 +383,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       <td nowrap class="tab-subhead1" width="5%"><a href="#" id="A679" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F679"></a></td>
                       <td colspan="12" align="left" nowrap class="tab-subhead1">Line Item Details</td>
                     </tr>
-                    <tbody id="G679" style="display: none;">
+                    <tbody id="G679" style="display: nonee;">
                       <tr>
                         <th rowspan="9">&nbsp;</th>
                         <th align="left" nowrap="nowrap"><div align="right">Start Date:</div></th>
@@ -450,7 +450,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <tr>
                               <td colspan="14" nowrap class="tab-subhead1"><a href="#" id="A8" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F8"></a> Justification</td>
                             </tr>
-                            <tbody id="G8" style="display: none;">
+                            <tbody id="G8" style="display: nonee;">
                               <tr>
                                 <th align="left"><div align="right">Justification:</div></th>
                                 <td align="left"><label>
@@ -478,7 +478,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
           </tr>
         </table>
-        <div class="tab-container" align="center" id="G126" style="display: none;">
+        <div class="tab-container" align="center" id="G126" style="display: nonee;">
           <div class="h2-container"> <span class="subhead-left">
             <h2>Equipment</h2>
             </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
@@ -556,7 +556,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       <td nowrap class="tab-subhead1" width="5%"><a href="#" id="A" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F"></a></td>
                       <td colspan="12" align="left" nowrap class="tab-subhead1">Line Item Details</td>
                     </tr>
-                    <tbody id="G" style="display: none;">
+                    <tbody id="G" style="display: nonee;">
                       <tr>
                         <th rowspan="9">&nbsp;</th>
                         <th align="left" nowrap="nowrap"><div align="right">Start Date:</div></th>
@@ -623,7 +623,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <tr>
                               <td colspan="14" nowrap class="tab-subhead1"><a href="#" id="A2" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F2"></a> Justification</td>
                             </tr>
-                            <tbody id="G2" style="display: none;">
+                            <tbody id="G2" style="display: nonee;">
                               <tr>
                                 <th align="left"><div align="right">Justification:</div></th>
                                 <td align="left"><label>
@@ -673,7 +673,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       <td nowrap class="tab-subhead1" width="5%"><a href="#" id="A4" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F4"></a></td>
                       <td colspan="12" align="left" nowrap class="tab-subhead1">Line Item Details</td>
                     </tr>
-                    <tbody id="G4" style="display: none;">
+                    <tbody id="G4" style="display: nonee;">
                       <tr>
                         <th rowspan="9">&nbsp;</th>
                         <th align="left" nowrap="nowrap"><div align="right">Start Date:</div></th>
@@ -740,7 +740,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <tr>
                               <td colspan="14" nowrap class="tab-subhead1"><a href="#" id="A8" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F8"></a> Justification</td>
                             </tr>
-                            <tbody id="G8" style="display: none;">
+                            <tbody id="G8" style="display: nonee;">
                               <tr>
                                 <th align="left"><div align="right">Justification:</div></th>
                                 <td align="left"><label>
@@ -768,7 +768,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
           </tr>
         </table>
-        <div class="tab-container" align="center" id="G128" style="display: none;">
+        <div class="tab-container" align="center" id="G128" style="display: nonee;">
           <div class="h2-container"> <span class="subhead-left">
             <h2>Travel</h2>
             </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
@@ -846,7 +846,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       <td nowrap class="tab-subhead1" width="5%"><a href="#" id="A" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F"></a></td>
                       <td colspan="12" align="left" nowrap class="tab-subhead1">Line Item Details</td>
                     </tr>
-                    <tbody id="G" style="display: none;">
+                    <tbody id="G" style="display: nonee;">
                       <tr>
                         <th rowspan="9">&nbsp;</th>
                         <th align="left" nowrap="nowrap"><div align="right">Start Date:</div></th>
@@ -913,7 +913,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <tr>
                               <td colspan="14" nowrap class="tab-subhead1"><a href="#" id="A2" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F2"></a> Justification</td>
                             </tr>
-                            <tbody id="G2" style="display: none;">
+                            <tbody id="G2" style="display: nonee;">
                               <tr>
                                 <th align="left"><div align="right">Justification:</div></th>
                                 <td align="left"><label>
@@ -963,7 +963,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       <td nowrap class="tab-subhead1" width="5%"><a href="#" id="A4" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F4"></a></td>
                       <td colspan="12" align="left" nowrap class="tab-subhead1">Line Item Details</td>
                     </tr>
-                    <tbody id="G4" style="display: none;">
+                    <tbody id="G4" style="display: nonee;">
                       <tr>
                         <th rowspan="9">&nbsp;</th>
                         <th align="left" nowrap="nowrap"><div align="right">Start Date:</div></th>
@@ -1030,7 +1030,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <tr>
                               <td colspan="14" nowrap class="tab-subhead1"><a href="#" id="A8" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F8"></a> Justification</td>
                             </tr>
-                            <tbody id="G8" style="display: none;">
+                            <tbody id="G8" style="display: nonee;">
                               <tr>
                                 <th align="left"><div align="right">Justification:</div></th>
                                 <td align="left"><label>
@@ -1058,7 +1058,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
           </tr>
         </table>
-        <div class="tab-container" align="center" id="G125" style="display: none;">
+        <div class="tab-container" align="center" id="G125" style="display: nonee;">
           <div class="h2-container"> <span class="subhead-left">
             <h2> Participant Support </h2>
             </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
@@ -1136,7 +1136,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       <td nowrap class="tab-subhead1" width="5%"><a href="#" id="A" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F"></a></td>
                       <td colspan="12" align="left" nowrap class="tab-subhead1">Line Item Details</td>
                     </tr>
-                    <tbody id="G" style="display: none;">
+                    <tbody id="G" style="display: nonee;">
                       <tr>
                         <th rowspan="9">&nbsp;</th>
                         <th align="left" nowrap="nowrap"><div align="right">Start Date:</div></th>
@@ -1203,7 +1203,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <tr>
                               <td colspan="14" nowrap class="tab-subhead1"><a href="#" id="A2" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F2"></a> Justification</td>
                             </tr>
-                            <tbody id="G2" style="display: none;">
+                            <tbody id="G2" style="display: nonee;">
                               <tr>
                                 <th align="left"><div align="right">Justification:</div></th>
                                 <td align="left"><label>
@@ -1253,7 +1253,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       <td nowrap class="tab-subhead1" width="5%"><a href="#" id="A4" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F4"></a></td>
                       <td colspan="12" align="left" nowrap class="tab-subhead1">Line Item Details</td>
                     </tr>
-                    <tbody id="G4" style="display: none;">
+                    <tbody id="G4" style="display: nonee;">
                       <tr>
                         <th rowspan="9">&nbsp;</th>
                         <th align="left" nowrap="nowrap"><div align="right">Start Date:</div></th>
@@ -1320,7 +1320,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <tr>
                               <td colspan="14" nowrap class="tab-subhead1"><a href="#" id="A8" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F8"></a> Justification</td>
                             </tr>
-                            <tbody id="G8" style="display: none;">
+                            <tbody id="G8" style="display: nonee;">
                               <tr>
                                 <th align="left"><div align="right">Justification:</div></th>
                                 <td align="left"><label>
@@ -1348,7 +1348,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
           </tr>
         </table>
-        <div class="tab-container" align="center" id="G129" style="display: none;">
+        <div class="tab-container" align="center" id="G129" style="display: nonee;">
           <div class="h2-container"> <span class="subhead-left">
             <h2>Other Direct</h2>
             </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
@@ -1426,7 +1426,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       <td nowrap class="tab-subhead1" width="5%"><a href="#" id="A" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F"></a></td>
                       <td colspan="12" align="left" nowrap class="tab-subhead1">Line Item Details</td>
                     </tr>
-                    <tbody id="G" style="display: none;">
+                    <tbody id="G" style="display: nonee;">
                       <tr>
                         <th rowspan="9">&nbsp;</th>
                         <th align="left" nowrap="nowrap"><div align="right">Start Date:</div></th>
@@ -1493,7 +1493,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <tr>
                               <td colspan="14" nowrap class="tab-subhead1"><a href="#" id="A2" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F2"></a> Justification</td>
                             </tr>
-                            <tbody id="G2" style="display: none;">
+                            <tbody id="G2" style="display: nonee;">
                               <tr>
                                 <th align="left"><div align="right">Justification:</div></th>
                                 <td align="left"><label>
@@ -1543,7 +1543,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       <td nowrap class="tab-subhead1" width="5%"><a href="#" id="A4" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F4"></a></td>
                       <td colspan="12" align="left" nowrap class="tab-subhead1">Line Item Details</td>
                     </tr>
-                    <tbody id="G4" style="display: none;">
+                    <tbody id="G4" style="display: nonee;">
                       <tr>
                         <th rowspan="9">&nbsp;</th>
                         <th align="left" nowrap="nowrap"><div align="right">Start Date:</div></th>
@@ -1610,7 +1610,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <tr>
                               <td colspan="14" nowrap class="tab-subhead1"><a href="#" id="A8" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15  border=0 align="absmiddle" id="F8"></a> Justification</td>
                             </tr>
-                            <tbody id="G8" style="display: none;">
+                            <tbody id="G8" style="display: nonee;">
                               <tr>
                                 <th align="left"><div align="right">Justification:</div></th>
                                 <td align="left"><label>
