*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@5938 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-7-25/bud-expenses4-full.html
+++ b/kra-coeus-7-25/bud-expenses4-full.html
@@ -143,7 +143,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </tr>
         </table>
         <!-- TAB -->
-        <div class="tab-container" align="center" id="G02" style="display: none;">
+        <div class="tab-container" align="center" id="G02" style="display: nonee;">
           <div class="h2-container"> <span class="subhead-left">
             <h2>Budget Overview (Period 1)</h2>
             </span></div>
