--- a/kra-coeus-7-25/prop-maintain.html
+++ b/kra-coeus-7-25/prop-maintain.html
@@ -81,29 +81,27 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div class="h2-container"> <span class="subhead-left">
             <h2>Document Overview </h2>
           </span><span class="subhead-right"> <span class="subhead"><a href="#"> </a></span></span></div>
-          <table cellpadding=0 cellspacing="0"  summary="">
-          </table>
-          <table  cellpadding="0" cellspacing="0"  summary="">
-            <tbody id="G32" style="display: none;">
-            </tbody>
-            <tbody id="G33" style="display: none;">
-            </tbody>
-            <tbody id="G34" style="display: none;">
-            </tbody>
-            <tbody id="G35" style="display: none;">
-            </tbody>
-            <tbody id="G36" style="display: none;">
-            </tbody>
-            <tbody id="G37" style="display: none;">
-            </tbody>
-            <tbody id="G38" style="display: none;">
-            </tbody>
-            <tbody id="G39" style="display: none;">
-            </tbody>
-            <tbody id="G40" style="display: none;">
-             
-            </tbody>
-          </table>
+        <table class="datatable-100" align="center" cellpadding="0" cellspacing="0">
+              <tbody>
+                <tr>
+                  <th  align="right" width="50%"> *Description: </th>
+                  <td  width="50%" align="left"><input name="accountNumber" value="" size="10" maxlength="100" style="" type="text">
+                    <a href="../lookup/asdf.html" tabindex="32767" target="helpWindow">  </a> </td>
+ 				</tr>
+                <tr>
+                  <th  align="right" width="50%"> *Org. Doc. #: </th>
+                  <td  width="50%" align="left"><input name="accountName" value="" size="40" maxlength="100" style="" type="text">
+                    <a href="../lookup/asdf.html" tabindex="32767" target="helpWindow">  </a> </td>
+                </tr>
+				<tr>
+				<th  align="right" width="50%"> Explanation: </th>
+				  <td colspan=3 align=left valign=middle><p>
+                    <textarea name="newPurchasingItemLine.itemDescription" tabindex=0 cols=50 rows=3 id="newPurchasingItemLine.itemDescription"></textarea>
+                    <input type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=500,height=300')" src="../images/pencil_add.png" alt="expand textarea">
+                  </td>
+				</tr>
+			 </tbody>
+            </table>
         </div>
         <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
           <tr>
@@ -115,10 +113,24 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         </table>
         <div class="tab-container" align="center" id="G3" style="display: nonee;">
           <div class="h2-container"><span class="subhead-left">
-            <h2>Edit Activity Type</h2>
+            <h2>New</h2>
           </span><span class="subhead-right"> <span class="subhead"><a href="#"> </a></span></span></div>
-        </div>
-        <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+           <table class="datatable-100" align="center" cellpadding="0" cellspacing="0">
+              <tbody>
+                <tr>
+                  <th  align="right" width="50%"> *Activity Type Code: </th>
+                  <td  width="50%" align="left"><input name="accountNumber" value="" size="10" maxlength="100" style="" type="text">
+                    <a href="../lookup/asdf.html" tabindex="32767" target="helpWindow">  </a> </td>
+                </tr>
+                <tr>
+                  <th  align="right" width="50%"> *Activity Type Name: </th>
+                  <td  width="50%" align="left"><input name="accountName" value="" size="40" maxlength="100" style="" type="text">
+                    <a href="../lookup/asdf.html" tabindex="32767" target="helpWindow">  </a> </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+		<table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
           <tr>
             <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="asdf" width="12" height="29" align="absmiddle" >Notes &amp; Attachments(0) </td>
             <td class="tabtable1-mid1">&nbsp;</td>
